[package]
name = "scale-encode"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/paritytech/scale-value"
documentation = "https://docs.rs/scale-value"
homepage = "https://www.parity.io/"
description = "Encode types to SCALE bytes given a desired target type"
keywords = ["parity", "scale", "encoding"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = ["bits"]
bits = ["dep:scale-bits"]

[dependencies]
scale-info = { version = "2.3.0", features = ["bit-vec"] }
thiserror = "1.0.37"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full"] }
scale-bits = { version = "0.3.0", default-features = false, features = ["scale-info"], optional = true }

[dev-dependencies]
scale-info = { version = "2.3.0", features = ["bit-vec", "derive"] }
