[package]
name = "scale-encode"
documentation = "https://docs.rs/scale-encode"
description = "Encode types to SCALE bytes given a desired target type"
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
include.workspace = true

[features]
default = ["derive", "primitive-types", "bits"]

# Include the derive proc macro
derive = ["dep:scale-encode-derive"]

# impls for key primitive-types
primitive-types = ["dep:primitive-types"]

# impls for Bits.
bits = ["dep:scale-bits"]

[dependencies]
scale-info = { version = "2.7.0", features = ["bit-vec"] }
thiserror = "1.0.37"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full"] }
scale-bits = { version = "0.3.0", default-features = false, features = ["scale-info"], optional = true }
scale-encode-derive = { workspace = true, optional = true }
primitive-types = { version = "0.12.0", optional = true, default-features = false }
smallvec = "1.10.0"

[dev-dependencies]
bitvec = "1.0.1"
scale-info = { version = "2.3.0", features = ["bit-vec", "derive"] }
scale-encode-derive = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
trybuild = "1.0.72"
# enable scale-info feature for testing:
primitive-types = { version = "0.12.0", default-features = false, features = ["scale-info"] }
