[package]
name = "test-no-std"
description = "Testing no_std build of scale-encode"
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
include.workspace = true

[dependencies]
scale-encode = { path = "../../scale-encode", default-features = false, features = ["primitive-types", "derive", "bits"] }
